--- a/public/act3/find-and-shutdown-frostys-snowglobe-machine/index.html
+++ b/public/act3/find-and-shutdown-frostys-snowglobe-machine/index.html
@@ -31,26 +31,26 @@ Once you find the Snowglobe Machine, figure out how to shut it down and melt Fro
     <meta itemprop="wordCount" content="724">
     <title>Find and Shutdown Frostys Snowglobe Machine :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act3/find-and-shutdown-frostys-snowglobe-machine/index.xml" rel="alternate" type="application/rss+xml" title="Find and Shutdown Frostys Snowglobe Machine :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1766237191" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1766237191" defer></script>
-    <script src="/js/search-lunr.js?1766237191" defer></script>
-    <script src="/js/search.js?1766237191" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1766237859" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1766237859" defer></script>
+    <script src="/js/search-lunr.js?1766237859" defer></script>
+    <script src="/js/search.js?1766237859" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1766237191";
+      window.relearn.index_js_url="/searchindex.en.js?1766237859";
     </script>
-    <script src="/js/lunr/lunr.min.js?1766237191" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1766237191" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1766237191" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1766237191" defer></script>
+    <script src="/js/lunr/lunr.min.js?1766237859" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1766237859" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1766237859" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1766237859" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766237191" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766237191" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766237191" rel="stylesheet">
-    <link href="/css/theme.css?1766237191" rel="stylesheet">
-    <link href="/css/format-html.css?1766237191" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766237859" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766237859" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766237859" rel="stylesheet">
+    <link href="/css/theme.css?1766237859" rel="stylesheet">
+    <link href="/css/format-html.css?1766237859" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -160,16 +160,16 @@ Once you find the Snowglobe Machine, figure out how to shut it down and melt Fro
 
 <h1 id="find-and-shutdown-frostys-snowglobe-machine">Find and Shutdown Frostys Snowglobe Machine</h1>
 
-<p><a href="#R-image-121473f6003757d1f662b173feb42509" class="lightbox-link"><img alt="Gnome Elder" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/gnome-elder.gif" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-121473f6003757d1f662b173feb42509"><img alt="Gnome Elder" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/gnome-elder.gif"></a></p>
+<p><a href="#R-image-e4a1c847587f5bf96202ca56bfc05d57" class="lightbox-link"><img alt="Gnome Elder" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/gnome-elder.gif" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-e4a1c847587f5bf96202ca56bfc05d57"><img alt="Gnome Elder" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/gnome-elder.gif"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 3/5</p>
 <p>You&rsquo;ve heard murmurings around the city about a wise, elderly gnome having a change of heart. He must have information about where Frosty&rsquo;s Snowglobe Machine is. You should find and talk to the gnome so you can get some help with how to make your way through the Data Center&rsquo;s labrynthian halls.</p>
 <p>Once you find the Snowglobe Machine, figure out how to shut it down and melt Frosty&rsquo;s cold, nefarious plans.</p>
 <h2 id="solution">Solution</h2>
 <p>The objective said I was to look for an elderly gnome, and so I did - and so I found him in a village in the outskirts of town:</p>
-<p><a href="#R-image-687ec404cf45b80cc99f56816a68b4b9" class="lightbox-link"><img alt="Talking with the Elder Gnome" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/act3-snowglobe-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-687ec404cf45b80cc99f56816a68b4b9"><img alt="Talking with the Elder Gnome" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/act3-snowglobe-1.png"></a></p>
+<p><a href="#R-image-372e71f0fdf31e2cdfd23da9e86ea56c" class="lightbox-link"><img alt="Talking with the Elder Gnome" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/act3-snowglobe-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-372e71f0fdf31e2cdfd23da9e86ea56c"><img alt="Talking with the Elder Gnome" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/act3-snowglobe-1.png"></a></p>
 <blockquote>
 <p>A change of heart, I have had, yes. Among the gnomes plotting to freeze the neighborhood, I once was. Wrong, we are. Help you now, I shall.</p>
 <p>The route to the old secret lab inside the Data Center, begins on the far East wing inside the building, it does. Pitch dark, the hallways leading to it probably are, hmm.</p>
@@ -179,11 +179,11 @@ Once you find the Snowglobe Machine, figure out how to shut it down and melt Fro
 </blockquote>
 <p>After giving the hints and what the Elderly Gnome said a thought, and some googling, I found out the code in question is the famous Konami cheat code. So I darted over to the data center and tried my luck navigating by it. No luck what so ever, I even tried to position myself by the compass directions. Being a bit irritated I began to investigate the source code.</p>
 <p>In the first maze room I noticed that if I inspected the landing tile pr. door (those squares in yellow), I managed to see that the CSS class for each gave away where they lead to:</p>
-<p><a href="#R-image-bea12cebc15adcca5c717164121ebbc8" class="lightbox-link"><img alt="Finding my way" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/act3-snowglobe-4.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-bea12cebc15adcca5c717164121ebbc8"><img alt="Finding my way" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/act3-snowglobe-4.png"></a></p>
+<p><a href="#R-image-85f4edb3413ab8718cdec0d2197fedae" class="lightbox-link"><img alt="Finding my way" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/act3-snowglobe-4.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-85f4edb3413ab8718cdec0d2197fedae"><img alt="Finding my way" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/act3-snowglobe-4.png"></a></p>
 <p>As an example, each one having the class <em>datacentermaze-city</em> would lead to the city streets. From here it was basically be just inspecting where each landing tile leads and select accordingly - then rinse and repeat. At the 11th door (or so) I found Frosty:</p>
-<p><a href="#R-image-f86f18629efb8045410666de5ca2d057" class="lightbox-link"><img alt="Finding Frosty" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/act3-snowglobe-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f86f18629efb8045410666de5ca2d057"><img alt="Finding Frosty" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/act3-snowglobe-2.png"></a></p>
+<p><a href="#R-image-9568de8b30a38c5d1239bdbd054fdfdf" class="lightbox-link"><img alt="Finding Frosty" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/act3-snowglobe-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-9568de8b30a38c5d1239bdbd054fdfdf"><img alt="Finding Frosty" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/act3-snowglobe-2.png"></a></p>
 <p>By talking to Frosty he had this to say:</p>
 <blockquote>
 <p>Every spring, I melt away. Every year, I fade into nothing while the world moves on without me. But not this time&hellip; not anymore.</p>
@@ -192,8 +192,8 @@ Once you find the Snowglobe Machine, figure out how to shut it down and melt Fro
 <p>The Gnomes have been gathering coolants, refrigerator parts, everything we need. Soon the Dosis Neighborhood will be a frozen paradise - MY frozen paradise. And I&rsquo;ll finally be permanent, just like Santa, just like all the other holiday icons who don&rsquo;t have to fear the sun.</p>
 </blockquote>
 <p>By positioning the camera I saw that there was a machine there too:</p>
-<p><a href="#R-image-04b14c54343ee7be25a59a53dd5ee29e" class="lightbox-link"><img alt="Frostys machine" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/act3-snowglobe-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-04b14c54343ee7be25a59a53dd5ee29e"><img alt="Frostys machine" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/act3-snowglobe-3.png"></a></p>
+<p><a href="#R-image-daffe2ad40c4d41992a9fdff41ca6ba3" class="lightbox-link"><img alt="Frostys machine" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/act3-snowglobe-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-daffe2ad40c4d41992a9fdff41ca6ba3"><img alt="Frostys machine" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/act3-snowglobe-3.png"></a></p>
 <h2 id="hints">Hints</h2>
 <ol>
 <li>
@@ -260,7 +260,8 @@ Once you find the Snowglobe Machine, figure out how to shut it down and melt Fro
             <li class="" data-nav-url="/act3/schrodingers-scope/index.html"><a class="padding" href="/act3/schrodingers-scope/index.html">Schrödingers Scope</a></li>
             <li class="active " data-nav-url="/act3/find-and-shutdown-frostys-snowglobe-machine/index.html"><a class="padding" href="/act3/find-and-shutdown-frostys-snowglobe-machine/index.html">Find and Shutdown Frostys Snowglobe Machine</a></li>
             <li class="" data-nav-url="/act3/on-the-wire/index.html"><a class="padding" href="/act3/on-the-wire/index.html">On the Wire</a></li>
-            <li class="" data-nav-url="/act3/free-ski/index.html"><a class="padding" href="/act3/free-ski/index.html">Free Ski</a></li></ul></li>
+            <li class="" data-nav-url="/act3/free-ski/index.html"><a class="padding" href="/act3/free-ski/index.html">Free Ski</a></li>
+            <li class="" data-nav-url="/act3/snowblind-ambush/index.html"><a class="padding" href="/act3/snowblind-ambush/index.html">Snowblind Ambush</a></li></ul></li>
           </ul>
         </div>
         <div class="R-sidebarmenu R-shortcutmenu-shortcuts">
@@ -278,8 +279,8 @@ Once you find the Snowglobe Machine, figure out how to shut it down and melt Fro
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1766237191" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766237191" defer></script>
-    <script src="/js/theme.js?1766237191" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1766237859" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766237859" defer></script>
+    <script src="/js/theme.js?1766237859" defer></script>
   </body>
 </html>
