--- a/public/act3/on-the-wire/index.html
+++ b/public/act3/on-the-wire/index.html
@@ -31,26 +31,26 @@ Evan Booth mission statement Hey, I’m Evan!">
     <meta itemprop="wordCount" content="4515">
     <title>On the Wire :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act3/on-the-wire/index.xml" rel="alternate" type="application/rss+xml" title="On the Wire :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1766237191" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1766237191" defer></script>
-    <script src="/js/search-lunr.js?1766237191" defer></script>
-    <script src="/js/search.js?1766237191" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1766237859" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1766237859" defer></script>
+    <script src="/js/search-lunr.js?1766237859" defer></script>
+    <script src="/js/search.js?1766237859" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1766237191";
+      window.relearn.index_js_url="/searchindex.en.js?1766237859";
     </script>
-    <script src="/js/lunr/lunr.min.js?1766237191" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1766237191" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1766237191" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1766237191" defer></script>
+    <script src="/js/lunr/lunr.min.js?1766237859" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1766237859" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1766237859" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1766237859" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766237191" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766237191" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766237191" rel="stylesheet">
-    <link href="/css/theme.css?1766237191" rel="stylesheet">
-    <link href="/css/format-html.css?1766237191" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766237859" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766237859" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766237859" rel="stylesheet">
+    <link href="/css/theme.css?1766237859" rel="stylesheet">
+    <link href="/css/format-html.css?1766237859" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -176,8 +176,8 @@ Evan Booth mission statement Hey, I’m Evan!">
 
 <h1 id="on-the-wire">On the Wire</h1>
 
-<p><a href="#R-image-6fed2da89ec002e4bbba61e2fa803960" class="lightbox-link"><img alt="Evan Booth" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/evanbooth-avatar.gif" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-6fed2da89ec002e4bbba61e2fa803960"><img alt="Evan Booth" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/evanbooth-avatar.gif"></a></p>
+<p><a href="#R-image-fe3e0db5c579ab0efa79abd0043933c0" class="lightbox-link"><img alt="Evan Booth" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/evanbooth-avatar.gif" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-fe3e0db5c579ab0efa79abd0043933c0"><img alt="Evan Booth" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/evanbooth-avatar.gif"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 4/5</p>
 <p>Help Evan next to city hall hack this gnome and retrieve the temperature value reported by the I²C device at address 0x3C. The temperature data is XOR-encrypted, so you’ll need to work through each communication stage to uncover the necessary keys. Start with the unencrypted data being transmitted over the 1-wire protocol.</p>
@@ -532,8 +532,8 @@ Evan Booth mission statement Hey, I’m Evan!">
 </span></span><span style="display:flex;"><span><span style="color:#66d9ef">if</span> __name__ <span style="color:#f92672">==</span> <span style="color:#e6db74">&#34;__main__&#34;</span>:
 </span></span><span style="display:flex;"><span>    main()</span></span></code></pre></div>
 <p>This script outputted:</p>
-<p><a href="#R-image-4b05349809ffca36c98f46ddb876209c" class="lightbox-link"><img alt="1-Wire XOR" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/act3-onthewire-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-4b05349809ffca36c98f46ddb876209c"><img alt="1-Wire XOR" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/act3-onthewire-1.png"></a></p>
+<p><a href="#R-image-fe8a2c00965c3b9af859a4d8ed2cbdea" class="lightbox-link"><img alt="1-Wire XOR" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/act3-onthewire-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-fe8a2c00965c3b9af859a4d8ed2cbdea"><img alt="1-Wire XOR" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/act3-onthewire-1.png"></a></p>
 <p>The XOR key is:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-text" data-lang="text"><span style="display:flex;"><span>icy</span></span></code></pre></div>
 <h3 id="spi">SPI</h3>
@@ -1010,8 +1010,8 @@ Evan Booth mission statement Hey, I’m Evan!">
 </span></span><span style="display:flex;"><span><span style="color:#66d9ef">if</span> __name__ <span style="color:#f92672">==</span> <span style="color:#e6db74">&#34;__main__&#34;</span>:
 </span></span><span style="display:flex;"><span>    main()</span></span></code></pre></div>
 <p>This script outputted:</p>
-<p><a href="#R-image-10f729a81c274d26d14ed86c9cfdbe0f" class="lightbox-link"><img alt="SPI output" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/act3-onthewire-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-10f729a81c274d26d14ed86c9cfdbe0f"><img alt="SPI output" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/act3-onthewire-2.png"></a></p>
+<p><a href="#R-image-dd4d8284f9ca39c45dc27572117e4857" class="lightbox-link"><img alt="SPI output" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/act3-onthewire-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-dd4d8284f9ca39c45dc27572117e4857"><img alt="SPI output" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/act3-onthewire-2.png"></a></p>
 <p>Decryptred text is:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-text" data-lang="text"><span style="display:flex;"><span>read and decrypt the I2C bus data using the XOR key: bananza. the temperature sensor address is 0x3</span></span></code></pre></div>
 <h3 id="i2c">I2C</h3>
@@ -1232,8 +1232,8 @@ Evan Booth mission statement Hey, I’m Evan!">
 </span></span><span style="display:flex;"><span><span style="color:#66d9ef">if</span> __name__ <span style="color:#f92672">==</span> <span style="color:#e6db74">&#34;__main__&#34;</span>:
 </span></span><span style="display:flex;"><span>    main()</span></span></code></pre></div>
 <p>This script outputted:</p>
-<p><a href="#R-image-35461e69f7fd1e0ee7123673e532f155" class="lightbox-link"><img alt="I2C output" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/act3-onthewire-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-35461e69f7fd1e0ee7123673e532f155"><img alt="I2C output" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/act3-onthewire-3.png"></a></p>
+<p><a href="#R-image-2309a7b6ee1f9d450cfb804cf027b017" class="lightbox-link"><img alt="I2C output" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/act3-onthewire-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-2309a7b6ee1f9d450cfb804cf027b017"><img alt="I2C output" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/act3-onthewire-3.png"></a></p>
 <p>The value I was looking for is:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-text" data-lang="text"><span style="display:flex;"><span>32.84</span></span></code></pre></div>
 <h2 id="evan-booth-mission-debrief">Evan Booth mission debrief</h2>
@@ -1436,7 +1436,8 @@ Evan Booth mission statement Hey, I’m Evan!">
             <li class="" data-nav-url="/act3/schrodingers-scope/index.html"><a class="padding" href="/act3/schrodingers-scope/index.html">Schrödingers Scope</a></li>
             <li class="" data-nav-url="/act3/find-and-shutdown-frostys-snowglobe-machine/index.html"><a class="padding" href="/act3/find-and-shutdown-frostys-snowglobe-machine/index.html">Find and Shutdown Frostys Snowglobe Machine</a></li>
             <li class="active " data-nav-url="/act3/on-the-wire/index.html"><a class="padding" href="/act3/on-the-wire/index.html">On the Wire</a></li>
-            <li class="" data-nav-url="/act3/free-ski/index.html"><a class="padding" href="/act3/free-ski/index.html">Free Ski</a></li></ul></li>
+            <li class="" data-nav-url="/act3/free-ski/index.html"><a class="padding" href="/act3/free-ski/index.html">Free Ski</a></li>
+            <li class="" data-nav-url="/act3/snowblind-ambush/index.html"><a class="padding" href="/act3/snowblind-ambush/index.html">Snowblind Ambush</a></li></ul></li>
           </ul>
         </div>
         <div class="R-sidebarmenu R-shortcutmenu-shortcuts">
@@ -1454,8 +1455,8 @@ Evan Booth mission statement Hey, I’m Evan!">
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1766237191" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766237191" defer></script>
-    <script src="/js/theme.js?1766237191" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1766237859" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766237859" defer></script>
+    <script src="/js/theme.js?1766237859" defer></script>
   </body>
 </html>
