--- a/public/act3/free-ski/index.html
+++ b/public/act3/free-ski/index.html
@@ -35,26 +35,26 @@ You know, it’s the strangest thing… I used to just waddle around the Geese I
     <meta itemprop="wordCount" content="741">
     <title>Free Ski :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act3/free-ski/index.xml" rel="alternate" type="application/rss+xml" title="Free Ski :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1766237191" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1766237191" defer></script>
-    <script src="/js/search-lunr.js?1766237191" defer></script>
-    <script src="/js/search.js?1766237191" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1766237859" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1766237859" defer></script>
+    <script src="/js/search-lunr.js?1766237859" defer></script>
+    <script src="/js/search.js?1766237859" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1766237191";
+      window.relearn.index_js_url="/searchindex.en.js?1766237859";
     </script>
-    <script src="/js/lunr/lunr.min.js?1766237191" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1766237191" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1766237191" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1766237191" defer></script>
+    <script src="/js/lunr/lunr.min.js?1766237859" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1766237859" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1766237859" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1766237859" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766237191" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766237191" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766237191" rel="stylesheet">
-    <link href="/css/theme.css?1766237191" rel="stylesheet">
-    <link href="/css/format-html.css?1766237191" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766237859" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766237859" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766237859" rel="stylesheet">
+    <link href="/css/theme.css?1766237859" rel="stylesheet">
+    <link href="/css/format-html.css?1766237859" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -149,7 +149,7 @@ You know, it’s the strangest thing… I used to just waddle around the Geese I
 <span class="btn cstyle link noborder notitle interactive"><a href="/act3/on-the-wire/index.html" title="On the Wire (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
-<span class="btn cstyle link noborder notitle"><span><i class="fa-fw fas fa-chevron-right"></i></span></span>
+<span class="btn cstyle link noborder notitle interactive"><a href="/act3/snowblind-ambush/index.html" title="Snowblind Ambush (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a></span>
             </div>
             <div class="topbar-button topbar-button-more" data-content-empty="hide" data-width-s="show" data-width-m="show" data-width-l="show">
 <span class="btn cstyle link noborder notitle interactive"><button onclick="toggleTopbarFlyout(this)" type="button" title="More"><i class="fa-fw fas fa-ellipsis-v"></i></button></span>
@@ -172,8 +172,8 @@ You know, it’s the strangest thing… I used to just waddle around the Geese I
 
 <h1 id="free-ski">Free Ski</h1>
 
-<p><a href="#R-image-0506ae91acf38f34bcf154483270cb7d" class="lightbox-link"><img alt="Goose Olivia" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/goose-space.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-0506ae91acf38f34bcf154483270cb7d"><img alt="Goose Olivia" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/goose-space.png"></a></p>
+<p><a href="#R-image-ad2552ac9e586f5edb7a79f9455c5cfa" class="lightbox-link"><img alt="Goose Olivia" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/goose-space.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-ad2552ac9e586f5edb7a79f9455c5cfa"><img alt="Goose Olivia" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/goose-space.png"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 5/5</p>
 <p>Go to the retro store and help Goose Olivia ski down the mountain and collect all five treasure chests to reveal the hidden flag in this classic SkiFree-inspired challenge.</p>
@@ -205,12 +205,12 @@ You know, it’s the strangest thing… I used to just waddle around the Geese I
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>pycdc/pycdas
 </span></span><span style="display:flex;"><span>pycdc/pycdas FreeSki.exe_extracted/FreeSki.pyc &gt; FreeSki.asm</span></span></code></pre></div>
 <p>This is a snippet from the <strong>FreeSki.asm</strong> file:</p>
-<p><a href="#R-image-01399631d12ace178b565dc444cfb74b" class="lightbox-link"><img alt="ASM snippet" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/act3-freeski-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-01399631d12ace178b565dc444cfb74b"><img alt="ASM snippet" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/act3-freeski-1.png"></a></p>
+<p><a href="#R-image-9de043b45beaad699027e4236fa0ce3e" class="lightbox-link"><img alt="ASM snippet" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/act3-freeski-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-9de043b45beaad699027e4236fa0ce3e"><img alt="ASM snippet" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/act3-freeski-1.png"></a></p>
 <h3 id="finding-the-solution">Finding the solution</h3>
 <p>From here I uploaded the <strong>FreeSki.asm</strong> to ChatGPT and asked what this file did - and I got this response:</p>
-<p><a href="#R-image-0f3cc4580f6c705223604e810a71dcd2" class="lightbox-link"><img alt="ChatGPT explaining the meaning of the ASM" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/act3-freeski-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-0f3cc4580f6c705223604e810a71dcd2"><img alt="ChatGPT explaining the meaning of the ASM" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/act3-freeski-2.png"></a></p>
+<p><a href="#R-image-1ba850542225f4a9c1a9103923b5696d" class="lightbox-link"><img alt="ChatGPT explaining the meaning of the ASM" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/act3-freeski-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-1ba850542225f4a9c1a9103923b5696d"><img alt="ChatGPT explaining the meaning of the ASM" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/act3-freeski-2.png"></a></p>
 <p>Then I asked ChatGPT to make a &ldquo;one-click-resolver&rdquo;:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-python" data-lang="python"><span style="display:flex;"><span><span style="color:#75715e">#!/usr/bin/env python3</span>
 </span></span><span style="display:flex;"><span><span style="color:#f92672">import</span> random
@@ -292,8 +292,8 @@ You know, it’s the strangest thing… I used to just waddle around the Geese I
 </span></span><span style="display:flex;"><span><span style="color:#66d9ef">if</span> __name__ <span style="color:#f92672">==</span> <span style="color:#e6db74">&#34;__main__&#34;</span>:
 </span></span><span style="display:flex;"><span>    main()</span></span></code></pre></div>
 <p>Oddly enough, ChatGPT usually takes a nosedive into forbidden territory and refuses to do CTF work. But this time it didn&rsquo;t complain and made a script that actually worked:</p>
-<p><a href="#R-image-ef35536f54f8db71014027e6eb237cae" class="lightbox-link"><img alt="Output from one click resolver" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/act3-freeski-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-ef35536f54f8db71014027e6eb237cae"><img alt="Output from one click resolver" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/act3-freeski-3.png"></a></p>
+<p><a href="#R-image-54965556344de18cd5557b55366c2a28" class="lightbox-link"><img alt="Output from one click resolver" class="lazy lightbox figure-image" loading="lazy" src="/images/act3/act3-freeski-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-54965556344de18cd5557b55366c2a28"><img alt="Output from one click resolver" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act3/act3-freeski-3.png"></a></p>
 <p>Passphrase is: <strong>frosty_yet_predictably_random</strong></p>
 <h2 id="goose-olivia-mission-debrief">Goose Olivia mission debrief</h2>
 <blockquote>
@@ -361,7 +361,8 @@ You know, it’s the strangest thing… I used to just waddle around the Geese I
             <li class="" data-nav-url="/act3/schrodingers-scope/index.html"><a class="padding" href="/act3/schrodingers-scope/index.html">Schrödingers Scope</a></li>
             <li class="" data-nav-url="/act3/find-and-shutdown-frostys-snowglobe-machine/index.html"><a class="padding" href="/act3/find-and-shutdown-frostys-snowglobe-machine/index.html">Find and Shutdown Frostys Snowglobe Machine</a></li>
             <li class="" data-nav-url="/act3/on-the-wire/index.html"><a class="padding" href="/act3/on-the-wire/index.html">On the Wire</a></li>
-            <li class="active " data-nav-url="/act3/free-ski/index.html"><a class="padding" href="/act3/free-ski/index.html">Free Ski</a></li></ul></li>
+            <li class="active " data-nav-url="/act3/free-ski/index.html"><a class="padding" href="/act3/free-ski/index.html">Free Ski</a></li>
+            <li class="" data-nav-url="/act3/snowblind-ambush/index.html"><a class="padding" href="/act3/snowblind-ambush/index.html">Snowblind Ambush</a></li></ul></li>
           </ul>
         </div>
         <div class="R-sidebarmenu R-shortcutmenu-shortcuts">
@@ -379,8 +380,8 @@ You know, it’s the strangest thing… I used to just waddle around the Geese I
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1766237191" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766237191" defer></script>
-    <script src="/js/theme.js?1766237191" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1766237859" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766237859" defer></script>
+    <script src="/js/theme.js?1766237859" defer></script>
   </body>
 </html>
