--- a/public/act3/index.html
+++ b/public/act3/index.html
@@ -23,26 +23,26 @@
     <meta itemprop="wordCount" content="25">
     <title>Act 3 :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act3/index.xml" rel="alternate" type="application/rss+xml" title="Act 3 :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1766237191" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1766237191" defer></script>
-    <script src="/js/search-lunr.js?1766237191" defer></script>
-    <script src="/js/search.js?1766237191" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1766237859" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1766237859" defer></script>
+    <script src="/js/search-lunr.js?1766237859" defer></script>
+    <script src="/js/search.js?1766237859" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1766237191";
+      window.relearn.index_js_url="/searchindex.en.js?1766237859";
     </script>
-    <script src="/js/lunr/lunr.min.js?1766237191" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1766237191" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1766237191" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1766237191" defer></script>
+    <script src="/js/lunr/lunr.min.js?1766237859" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1766237859" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1766237859" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1766237859" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766237191" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766237191" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766237191" rel="stylesheet">
-    <link href="/css/theme.css?1766237191" rel="stylesheet">
-    <link href="/css/format-html.css?1766237191" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766237859" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766237859" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766237859" rel="stylesheet">
+    <link href="/css/theme.css?1766237859" rel="stylesheet">
+    <link href="/css/format-html.css?1766237859" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -205,7 +205,8 @@
             <li class="" data-nav-url="/act3/schrodingers-scope/index.html"><a class="padding" href="/act3/schrodingers-scope/index.html">Schrödingers Scope</a></li>
             <li class="" data-nav-url="/act3/find-and-shutdown-frostys-snowglobe-machine/index.html"><a class="padding" href="/act3/find-and-shutdown-frostys-snowglobe-machine/index.html">Find and Shutdown Frostys Snowglobe Machine</a></li>
             <li class="" data-nav-url="/act3/on-the-wire/index.html"><a class="padding" href="/act3/on-the-wire/index.html">On the Wire</a></li>
-            <li class="" data-nav-url="/act3/free-ski/index.html"><a class="padding" href="/act3/free-ski/index.html">Free Ski</a></li></ul></li>
+            <li class="" data-nav-url="/act3/free-ski/index.html"><a class="padding" href="/act3/free-ski/index.html">Free Ski</a></li>
+            <li class="" data-nav-url="/act3/snowblind-ambush/index.html"><a class="padding" href="/act3/snowblind-ambush/index.html">Snowblind Ambush</a></li></ul></li>
           </ul>
         </div>
         <div class="R-sidebarmenu R-shortcutmenu-shortcuts">
@@ -223,8 +224,8 @@
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1766237191" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766237191" defer></script>
-    <script src="/js/theme.js?1766237191" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1766237859" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766237859" defer></script>
+    <script src="/js/theme.js?1766237859" defer></script>
   </body>
 </html>
