--- a/public/act3/free-ski/index.html
+++ b/public/act3/free-ski/index.html
@@ -35,26 +35,26 @@ You know, it’s the strangest thing… I used to just waddle around the Geese I
     <meta itemprop="wordCount" content="741">
     <title>Free Ski :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act3/free-ski/index.xml" rel="alternate" type="application/rss+xml" title="Free Ski :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1766479342" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1766479342" defer></script>
-    <script src="/js/search-lunr.js?1766479342" defer></script>
-    <script src="/js/search.js?1766479342" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1766493084" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1766493084" defer></script>
+    <script src="/js/search-lunr.js?1766493084" defer></script>
+    <script src="/js/search.js?1766493084" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1766479342";
+      window.relearn.index_js_url="/searchindex.en.js?1766493084";
     </script>
-    <script src="/js/lunr/lunr.min.js?1766479342" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1766479342" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1766479342" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1766479342" defer></script>
+    <script src="/js/lunr/lunr.min.js?1766493084" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1766493084" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1766493084" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1766493084" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766479342" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766479342" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766479342" rel="stylesheet">
-    <link href="/css/theme.css?1766479342" rel="stylesheet">
-    <link href="/css/format-html.css?1766479342" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766493084" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766493084" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766493084" rel="stylesheet">
+    <link href="/css/theme.css?1766493084" rel="stylesheet">
+    <link href="/css/format-html.css?1766493084" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -363,6 +363,7 @@ You know, it’s the strangest thing… I used to just waddle around the Geese I
             <li class="" data-nav-url="/act3/on-the-wire/index.html"><a class="padding" href="/act3/on-the-wire/index.html">On the Wire</a></li>
             <li class="active " data-nav-url="/act3/free-ski/index.html"><a class="padding" href="/act3/free-ski/index.html">Free Ski</a></li>
             <li class="" data-nav-url="/act3/snowblind-ambush/index.html"><a class="padding" href="/act3/snowblind-ambush/index.html">Snowblind Ambush</a></li></ul></li>
+            <li class="" data-nav-url="/endgame/index.html"><a class="padding" href="/endgame/index.html">Endgame</a></li>
           </ul>
         </div>
         <div class="R-sidebarmenu R-shortcutmenu-shortcuts">
@@ -380,8 +381,8 @@ You know, it’s the strangest thing… I used to just waddle around the Geese I
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1766479342" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766479342" defer></script>
-    <script src="/js/theme.js?1766479342" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1766493084" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766493084" defer></script>
+    <script src="/js/theme.js?1766493084" defer></script>
   </body>
 </html>
