--- a/public/act3/snowblind-ambush/index.html
+++ b/public/act3/snowblind-ambush/index.html
@@ -35,26 +35,26 @@ If I’m not climbing, snowboarding, or hacking, I’m probably preparing for my
     <meta itemprop="wordCount" content="2213">
     <title>Snowblind Ambush :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act3/snowblind-ambush/index.xml" rel="alternate" type="application/rss+xml" title="Snowblind Ambush :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1766479342" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1766479342" defer></script>
-    <script src="/js/search-lunr.js?1766479342" defer></script>
-    <script src="/js/search.js?1766479342" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1766493084" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1766493084" defer></script>
+    <script src="/js/search-lunr.js?1766493084" defer></script>
+    <script src="/js/search.js?1766493084" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1766479342";
+      window.relearn.index_js_url="/searchindex.en.js?1766493084";
     </script>
-    <script src="/js/lunr/lunr.min.js?1766479342" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1766479342" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1766479342" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1766479342" defer></script>
+    <script src="/js/lunr/lunr.min.js?1766493084" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1766493084" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1766493084" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1766493084" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766479342" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766479342" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766479342" rel="stylesheet">
-    <link href="/css/theme.css?1766479342" rel="stylesheet">
-    <link href="/css/format-html.css?1766479342" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766493084" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766493084" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766493084" rel="stylesheet">
+    <link href="/css/theme.css?1766493084" rel="stylesheet">
+    <link href="/css/format-html.css?1766493084" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -151,7 +151,7 @@ If I’m not climbing, snowboarding, or hacking, I’m probably preparing for my
 <span class="btn cstyle link noborder notitle interactive"><a href="/act3/free-ski/index.html" title="Free Ski (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
-<span class="btn cstyle link noborder notitle"><span><i class="fa-fw fas fa-chevron-right"></i></span></span>
+<span class="btn cstyle link noborder notitle interactive"><a href="/endgame/index.html" title="Endgame (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a></span>
             </div>
             <div class="topbar-button topbar-button-more" data-content-empty="hide" data-width-s="show" data-width-m="show" data-width-l="show">
 <span class="btn cstyle link noborder notitle interactive"><button onclick="toggleTopbarFlyout(this)" type="button" title="More"><i class="fa-fw fas fa-ellipsis-v"></i></button></span>
@@ -683,6 +683,7 @@ If I’m not climbing, snowboarding, or hacking, I’m probably preparing for my
             <li class="" data-nav-url="/act3/on-the-wire/index.html"><a class="padding" href="/act3/on-the-wire/index.html">On the Wire</a></li>
             <li class="" data-nav-url="/act3/free-ski/index.html"><a class="padding" href="/act3/free-ski/index.html">Free Ski</a></li>
             <li class="active " data-nav-url="/act3/snowblind-ambush/index.html"><a class="padding" href="/act3/snowblind-ambush/index.html">Snowblind Ambush</a></li></ul></li>
+            <li class="" data-nav-url="/endgame/index.html"><a class="padding" href="/endgame/index.html">Endgame</a></li>
           </ul>
         </div>
         <div class="R-sidebarmenu R-shortcutmenu-shortcuts">
@@ -700,8 +701,8 @@ If I’m not climbing, snowboarding, or hacking, I’m probably preparing for my
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1766479342" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766479342" defer></script>
-    <script src="/js/theme.js?1766479342" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1766493084" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766493084" defer></script>
+    <script src="/js/theme.js?1766493084" defer></script>
   </body>
 </html>
